# ttc-http

./: .gitignore  LICENSE.md  Makefile  README.md  compile_flags.txt  lchttp.c  lchttp.h  lchttp.h.in  lchttp.pc  meson.build  meson.options  ttc-http.c  ttc-http.h
examples/: discord.c  endian.c  example.c
includes/ttc-http/: http.h  request.h  response.h  sockets.h  websockets.h
includes/ttc-http/private/: requests.h  sockets.h
man/: ttc-requests.man  ttc-response.man  ttc-socket.man  ttc-websocket.man
src/: ttc-requests.c  ttc-response.c  ttc-socket.c  ttc-websocket.c
